tests/import/t22065.nim
discard """
  errormsg: "cannot open file: ./sugar"
"""

import ./sugar